Project

General

Profile

Actions

Bug #41410

closed

radosgw-admin: bucket link fails, regression introduced by user rename

Added by Matt Benjamin over 4 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

radosgw-admin bucket link --bucket=/bkt15 --uid='testx$tester' --debug_rgw=20 --debug_ms=1 > test 2>&1

2019-08-22 22:49:37.525426 7f9e32e8c700 1 -- 172.18.96.20:0/2269042093 <== osd.28 172.18.96.64:6806/368010 4 ==== osd_op_reply(71 bkt15 [call,call,delete] v406'740 uv739 ondisk = -125 ((125) Operation canceled)) v8 ==== 233+0+0 (103247301 0 0) 0x7f9e2c0145f0 con 0x563873918830
failure: (125) Operation canceled: failed to unlink old bucket endpoint /bkt15

(Test case by Vikhyat Umrao)


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #43787: nautilus: radosgw-admin: bucket link fails, regression introduced by user renameRejectedActions
Actions #1

Updated by Matt Benjamin over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 29851
Actions #2

Updated by Casey Bodley over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43787: nautilus: radosgw-admin: bucket link fails, regression introduced by user rename added
Actions #4

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #5

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF