rgw: fix version tracking across bucket link steps

Updated to cover tenanted case--failing two ways:
1. missing tracker on delete old endpoint
2. not taking the new-bucket-instance path because
   rgw_bucket::operator== doesn't consider tenant (but
   operator!= does [!])

Fixes: https://tracker.ceph.com/issues/41410
Resolves: rhbz#1763219

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit 118bef86bf17cc0c8048e6c70db7a6bb48ef73ee)
(cherry picked from commit 03dfcaf43aa14bd2c21048038aaa2d9ecf7596c1)
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>